--- a/assets/scss/pdf/_utilities.scss
+++ b/assets/scss/pdf/_utilities.scss
@@ -16,6 +16,9 @@
 .text-weight-bold {
     font-weight: bold;
 }
+.text-normal {
+    font-weight: normal;
+}
 .text-lowercase {
     text-transform: lowercase;
 }
